--- a/index.html
+++ b/index.html
@@ -45,13 +45,37 @@
                         <textarea id="parsedCode" title="Parse code"></textarea>
                     </div>
                 </td>
-            </tr>
+
+
             <tr>
+                <table >
+
+                    <thead>
+                    <tr>
+                        <th>Line</th>
+                        <th>Type</th>
+                        <th>Name</th>
+                        <th>Condition</th>
+                        <th>Value</th>
+                    </tr>
+                    </thead>
+                    <tbody id="myTbody">
+
+                    </tbody>
+
+                </table>
+            </tr>
+
                 <td>
                     <div>
                         <button id="codeSubmissionButton">Parse code</button>
                     </div>
                 </td>
+            <td>
+                <div>
+                    <button id="addRow">add row</button>
+                </div>
+            </td>
                 <td>
                 </td>
             </tr>
