--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
 
                     <thead>
                     <tr>
-                        <th>Line</th>
-                        <th>Type</th>
-                        <th>Name</th>
-                        <th>Condition</th>
-                        <th>Value</th>
                     </tr>
                     </thead>
                     <tbody id="myTbody">
@@ -73,7 +68,7 @@
                 </td>
             <td>
                 <div>
-                    <button id="addRow">add row</button>
+                    <button id="color_if">color if</button>
                 </div>
             </td>
                 <td>
