--- a/index.html
+++ b/index.html
@@ -1,81 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <style>
-            table {
-                width: 100%;
-                height: 100%;
-            }
+    <style>
+        table {
+            width: 100%;
+            height: 100%;
+        }
 
-            .textAreaWrapper {
-                width: 100%;
-                height: 80vh;
-            }
+        .textAreaWrapper {
+            width: 100%;
+            height: 80vh;
+        }
 
-            textarea {
-                width: 80%;
-                height: 95%;
-            }
-        </style>
-    </head>
-    <body>
-        <table>
+        textarea {
+            width: 80%;
+            height: 95%;
+        }
+    </style>
+</head>
+<body>
+<table>
+    <tr>
+        <td>
+            <div>
+                <label>Enter code here</label>
+            </div>
+        </td>
+        <td>
+            <div>
+                <label>Parsed code here</label>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="textAreaWrapper">
+                <textarea id="codePlaceholder" title="Enter code here"></textarea>
+            </div>
+        </td>
+        <td>
+            <div class="textAreaWrapper">
+                <textarea id="parsedCode" title="Parse code"></textarea>
+            </div>
+        </td>
+
+
+    <tr>
+        <table >
+
+            <thead>
             <tr>
-                <td>
-                    <div>
-                        <label>Enter code here</label>
-                    </div>
-                </td>
-                <td>
-                    <div>
-                        <label>Parsed code here</label>
-                    </div>
-                </td>
             </tr>
-            <tr>
-                <td>
-                    <div class="textAreaWrapper">
-                        <textarea id="codePlaceholder" title="Enter code here"></textarea>
-                    </div>
-                </td>
-                <td>
-                    <div class="textAreaWrapper">
-                        <textarea id="parsedCode" title="Parse code"></textarea>
-                    </div>
-                </td>
+            </thead>
+            <tbody id="myTbody">
 
+            </tbody>
 
-            <tr>
-                <table >
-
-                    <thead>
-                    <tr>
-                    </tr>
-                    </thead>
-                    <tbody id="myTbody">
-
-                    </tbody>
-
-                </table>
-            </tr>
-
-                <td>
-                    <div>
-                        <button id="codeSubmissionButton">Parse code</button>
-                    </div>
-                </td>
-            <td>
-                <div>
-                    <button id="color_if">color if</button>
-                </div>
-            </td>
-                <td>
-                </td>
-            </tr>
         </table>
+    </tr>
+    <td>
+        <div id="graph">
 
-        <script src="dist/bundle.js"></script>
-    </body>
+        </div>
+    </td>
+
+    <td>
+        <div>
+            <button id="codeSubmissionButton">Parse code</button>
+        </div>
+    </td>
+    <td>
+        <div>
+            <button id="make_cgf">make_cgf</button>
+        </div>
+    </td>
+    <td>
+    </td>
+    </tr>
+</table>
+
+<script src="dist/bundle.js"></script>
+</body>
 </html>
